hphp/test/quick/debug_backtrace_multiline.php.expectf

Fatal error: Uncaught exception 'Exception' with message '56' in %s/test/quick/debug_backtrace_multiline.php:56
Stack trace:
#0 {main}
